styles/page.css
/**
 CA Design System Page CSS
*/

.page-container-ds {
    max-width: 1176px;
}

.main-content-ds {
    max-width: 100%;
}

.single-column.landing {
    max-width: 1176px;
}

/* Single column layout */
.single-column {
    max-width: 876px;
}

/* SIDEBAR */
/* (see README.md) */

.sidebar-container {
    display: block;
    width: 276px;
    max-width: 276px;
}

.with-sidebar .main-content-default,
.with-sidebar .ds-content-layout {
    display: flex;
    flex-wrap: wrap;
    margin: calc(var(--s1) / 2 * -1);
}

.with-sidebar.has-sidebar-left .main-content-default>*,
.with-sidebar.has-sidebar-left .main-content-ds .ds-content-layout>.everylayout {
    margin: calc(var(--s1) / 2);
    flex-basis: 267px;
    flex-grow: 1;
}

.with-sidebar.has-sidebar-left .main-content-default> :last-child,
.with-sidebar.has-sidebar-left .main-content-ds .ds-content-layout>.everylayout:last-child {
    flex-basis: 0;
    flex-grow: 999;
    min-width: calc(50% - var(--s1));
}

.with-sidebar.has-sidebar-right .main-content-default,
.with-sidebar.has-sidebar-right .main-content-ds .ds-content-layout>.everylayout {
    flex-basis: 0;
    flex-grow: 999;
    min-width: calc(50% - var(--s1));
}

.with-sidebar.has-sidebar-right .main-content-default>*> :last-child,
.with-sidebar.has-sidebar-right .main-content-ds .ds-content-layout> :last-child {
    margin: calc(var(--s1) / 2);
    flex-basis: 267px;
    flex-grow: 1;
}

.with-sidebar.page-container-ds.has-sidebar-left main {
    margin-left: 64px;
    margin-right: 20px;
}

.with-sidebar.page-container-ds.has-sidebar-right main {
    margin-right: 64px;
    margin-left: 20px;
}


/* For custom css -- conflicts are back, these overrides set them right, but need to be re-integrated with main markup. */

/* Fixing all block spacing */

.page-container-ds {
    margin: 0 auto;
}

.single-column {
    margin: 0 auto;
}

/* First Block has a top margin */
#main-content {
    margin-top: 0px; /* Navigation has extra 32px */
    margin-bottom: 64px;
}

#main-content.landing {
    margin-top: 32px;
    margin-bottom: 32px;
}

.cagov-block {
    margin-bottom: 64px;
}

/* Reset wp block columns spacing */
.wp-block-columns {
    margin-top: 0px;
    margin-bottom: 0px !important; /* Conflict with WP styles & load order */
}

.wp-block-column {
    margin-top: 0px;
    margin-bottom: 0px;
}


#main-content.landing .wp-block-columns .cagov-block {
    margin-bottom: 32px; 
}

@media (min-width: 1176px) {
    #main-content.main-content-ds.landing .breadcrumb {
        margin-top: 0px;
        margin-bottom: 64px !important; /* conflict with divi breadcrumb class*/
        padding-top: 0px !important;
        padding-bottom: 0px !important;
    }

    #main-content.main-content-ds.single-column .breadcrumb,
    .with-sidebar.has-sidebar-left.page-container-ds #main-content.main-content-ds .breadcrumb {
        margin-top: 32px;
        margin-bottom: 64px !important;  /* conflict with divi breadcrumb class*/
        padding-top: 0px !important;
        padding-bottom: 0px !important;
    }
}

.cagov-block h2,
.cagov-block h3,
.cagov-block h4,
.cagov-block h6,
.cagov-block h6 {
    margin-bottom: 24px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    padding-bottom: 0 !important;
}

.wp-block-column h2 {
    margin-top: 0;
}




/* BREADCRUMB */

.with-sidebar .main-container-ds {
    max-width: 877px;
}

.breadcrumb {
    display: block;
    background-color: #F9F9FA;
    padding: 8px 16px;
    font-size: 16px;
}

.breadcrumb a {
    text-decoration: underline;
    text-decoration-thickness: 1px;
    margin-left: 5px;
    margin-right: 5px;
    display: inline-block;
    text-underline-position: under;
}

.breadcrumb span {
    padding-left: 5px;
    padding-right: 5px;
}

/* Category label */
.page-container-ds main category-label ul:not([class*="menu"]):not([class*="nav"]):not([class*="footer-links"]),
.page-container-ds main category-label ul {
    margin: 0;
    text-indent: 0;
    padding: 0;
}

category-label {
    color: #000;
    margin-bottom: 24px;
    font-weight: 700;
}

category-label a {
    color: #000;
    font-weight: 700;
}

time {
    margin-top: 24px;
    margin-bottom: 24px;
    color: #000;
    font-weight: 700;
}

category-label a {
    color: #000;
    font-weight: 700;
}

/* CONTENT NAVIGATION */
sidebar cagov-content-navigation .label {
    font-weight: 700;
    font-size: 24px;
    line-height: 28.2px;
    padding: 0;
    margin: 0;
    padding-bottom: 16px;
}

sidebar cagov-content-navigation ul,
sidebar cagov-content-navigation ol:not([class*="menu"]):not([class*="nav"]):not([class*="footer-links"]),
sidebar cagov-content-navigation ul:not([class*="menu"]):not([class*="nav"]):not([class*="footer-links"]) {
    margin: 0;
    text-indent: 0;
    padding: 0;
}

sidebar cagov-content-navigation ul li {
    padding-top: 16px;
    margin-top: 16px;
    border-top: 1px solid #EDEDEF;
    line-height: 28.2px;
}

sidebar cagov-content-navigation ul li:first-child {
    margin-top: 0px;
}

cagov-content-navigation a {
    text-decoration: underline;
    text-decoration-thickness: 1px;
    text-underline-position: under;
}

/* CONTENT FOOTER */

.content-footer-container {
    border-bottom: 1px solid #EDEDEF;
    border-top: 1px solid #EDEDEF;
    padding-top: 23px;
    padding-bottom: 23px;
}

.per-page-feedback-container {
    max-width: 1176px !important;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 32px;
}

.content-footer {
    max-width: 1176px !important;
    margin-right: auto;
    margin-left: auto;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
}

.content-footer .menu-section.menu-section-social {
    margin-left: auto;
    align-items: flex-end;
}

.menu-section {
    margin-right: 24px;
}

.menu-section:last-child {
    margin-right: 0px;
}
/* ... */

